@@ -72,6 +72,10 @@ Changes
 Fixes
 =====
 
+ - Fixed an issue when using GRANT/REVOKE/DENY statements on a table with a
+   custom schema set. The statements would result in permission changed on the
+   default ``doc`` schema.
+
  - Fixed an issue with ``INNER`` and ``CROSS JOINS`` on more than 2 tables that
    could result in a ``Iterator is not on a row`` error.
 
